Revision history for Test-TempDir-Tiny

{{$NEXT}}

0.004     2015-03-04 16:53:21-05:00 America/New_York

    [Added]

    - Setting $ENV{PERL_TEST_TEMPDIR_TINY_NOCLEANUP} to a true value
      will prevent any directories from being cleaned up

    [Changes]

    - Temporary directories are returned with platform-native separators

    - Drop Time::HiRes in favor of built-in select to implement a small sleep

    - Lowered minimum Perl prerequisite to 5.6

    [Fixes]

    - Fixes tests on Windows

0.003     2015-01-04 06:30:28-05:00 America/New_York

    [Fixes]

    - Changed temp directory creation to avoid race conditions under
      parallel testing

0.002     2014-11-05 06:09:24-05:00 America/New_York

    [Tests]

    - Added tests for non-word characters

    [Documentation]

    - Noted that test-file-specific dirs are cleaned when reused

    - Improved synopsis examples

0.001     2014-11-04 17:07:17-05:00 America/New_York

    - First release
